# xeeg

./: README.md  TODO.md
docs/: 404.html  (+3 more)
xeeg-cli/: Cargo.toml  LICENSE.md  README.md  TODO.md  build.sh
xeeg-cli/downloads/: .rustc_info.json  xeeg_0.1.0_amd64.deb
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/Inflector-40391c1c4ebf5211/: lib-inflector  lib-inflector.json
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/aho-corasick-f0cfbe214b136312/: lib-aho_corasick  lib-aho_corasick.json
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/anyhow-1fad75043fa02d2c/: lib-anyhow  lib-anyhow.json
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/anyhow-8cbbbfc5ff109d50/: run-build-script-build-script-build  run-build-script-build-script-build.json
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/atty-02a29a4976ccca23/: lib-atty  lib-atty.json
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/bitflags-19c2791a152b84ca/: lib-bitflags  lib-bitflags.json
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/cfg-if-a02175b846a01a4a/: lib-cfg-if  lib-cfg-if.json
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/clap-187f8734a6943eec/: lib-clap  lib-clap.json
xeeg-cli/downloads/x86_64-pc-windows-gnu/release/.fingerprint/clap-51a8402671972a00/: lib-clap  lib-clap.json
xeeg-cli/scripts/: linux-auto-installation.sh  windows-auto-installation.bat
xeeg-cli/src/: main.rs
xeeg-cli/src/config/: mod.rs
xeeg-cli/stubs/: action.stub  example.stub  pages.stub
(+159 files in other folders)
